Python-f2py: Add secondary package cloudscf2py to Python package

--- a/src/cloudsc_python/setup.cfg
+++ b/src/cloudsc_python/setup.cfg
@@ -27,7 +27,8 @@ packages = find:
 include_package_data = True
 python_requires = >= 3.7
 package_dir =
-    =src
+    cloudsc4py = src/cloudsc4py
+    cloudscf2py = src/cloudscf2py
 install_requires =
     click
     gt4py[dace] >= 1.0.1
