--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(cloudsc_fortran)
 add_subdirectory(cloudsc_c)
 add_subdirectory(cloudsc_gpu)
 add_subdirectory(cloudsc_loki)
+add_subdirectory(cloudsc_cuf_loki)
