Minor changes/additions and started implementation of SCC-CUF-k-caching (working but some results are wrong)

--- a/src/cloudsc_cuda/CMakeLists.txt
+++ b/src/cloudsc_cuda/CMakeLists.txt
@@ -18,6 +18,7 @@ if( HAVE_CLOUDSC_CUDA )
     enable_language(CUDA)
     enable_language(CXX)
 
+    ###### SCC-CUDA ####
     ecbuild_add_library(
         TARGET dwarf-cloudsc-cuda-lib
 	INSTALL_HEADERS LISTED
@@ -97,9 +98,9 @@ if( HAVE_CLOUDSC_CUDA )
 
 
     target_compile_options(dwarf-cloudsc-cuda-hoist-lib PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
-    #                   --generate-line-info
-    #                   --relocatable-device-code=true
-    #                  -g -G
+	    #                   --generate-line-info
+	    #           --relocatable-device-code=true
+	    #           -g -G
                        -gencode arch=compute_80,code=sm_80
                        >)
 
@@ -121,6 +122,60 @@ if( HAVE_CLOUDSC_CUDA )
 
     target_link_libraries(dwarf-cloudsc-cuda-hoist dwarf-cloudsc-cuda-hoist-lib)
     ###
+
+    ###### SCC-CUDA-K-CACHING ####
+    ecbuild_add_library(
+        TARGET dwarf-cloudsc-cuda-k-caching-lib
+        INSTALL_HEADERS LISTED
+        SOURCES
+            cloudsc/yoecldp_c.h
+            cloudsc/yoethf_c.h
+            cloudsc/yomcst_c.h
+            cloudsc/load_state.h
+            cloudsc/load_state.cu
+            cloudsc/cloudsc_c_k_caching.h
+            cloudsc/cloudsc_c_k_caching.cu
+            cloudsc/cloudsc_driver_k_caching.h
+            cloudsc/cloudsc_driver_k_caching.cu
+            cloudsc/cloudsc_validate.h
+            cloudsc/cloudsc_validate.cu
+            cloudsc/mycpu.h
+            cloudsc/mycpu.cu
+        PUBLIC_INCLUDES
+            $<INSTALL_INTERFACE:include>
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
+        PUBLIC_LIBS
+            Serialbox::Serialbox_C
+            $<${HAVE_OMP}:OpenMP::OpenMP_C>
+    )
+
+
+    target_compile_options(dwarf-cloudsc-cuda-k-caching-lib PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
+             	    --generate-line-info
+                      --relocatable-device-code=true
+                      -g -G
+                       -gencode arch=compute_80,code=sm_80
+                       >)
+
+    target_include_directories(dwarf-cloudsc-cuda-k-caching-lib PUBLIC "/usr/local/apps/nvidia/22.1/Linux_x86_64/22.1/cuda/include")
+
+    #target_link_options(dwarf-cloudsc-cuda-lib PUBLIC "-Mcuda")
+    set_target_properties( dwarf-cloudsc-cuda-k-caching-lib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+
+    #target_include_directories( dwarf-cloudsc-cuda-lib PUBLIC
+    #    ${CMAKE_CURRENT_SOURCE_DIR}
+    #    ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
+    #    ${CUDA_INCLUDE_DIRS})
+
+    ecbuild_add_executable(
+        TARGET  dwarf-cloudsc-cuda-k-caching
+        SOURCES dwarf_cloudsc_k_caching.cpp
+        LIBS dwarf-cloudsc-cuda-k-caching-lib
+    )
+
+    target_link_libraries(dwarf-cloudsc-cuda-k-caching dwarf-cloudsc-cuda-k-caching-lib)
+    ###
+
 
 
     # Create symlink for the input data
