Bundle: Revert Loki versoin to main branch for testing

--- a/bundle.yml
+++ b/bundle.yml
@@ -29,7 +29,7 @@ projects :
 
     - loki :
         git     : https://github.com/ecmwf-ifs/loki
-        version : nams_cuf_transformation
+        version : main
         optional: true
         require : ecbuild
         cmake   : >
