Loki-SCC-CUF: Move loki-scc-cuf variants to cloudsc_loki

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -19,7 +19,7 @@ disable = ['timer%start', 'timer%end', 'timer%thread_start', 'timer%thread_end',
 
 # Define entry point for call-tree transformation
 [[routine]]
-name = 'cloudsc_driver'
+name = 'cuf_cloudsc_driver'
 role = 'driver'
 expand = true
 
