Remove locals from driver, add clic option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,10 +93,12 @@ endif()
 
 ecbuild_find_package( NAME loki )
 
-ecbuild_find_package( NAME Python )
+ecbuild_find_python( VERSION 3.11 REQUIRED)
 
 if ( Python_FOUND )
-  execute_process(COMMAND ${Python_EXECUTABLE} -m pip install f90wrap h5py)
+  execute_process(COMMAND ${PYTHON_EXECUTABLE} -m pip install --upgrade pip)
+  execute_process(COMMAND ${PYTHON_EXECUTABLE} -m pip install f90wrap h5py)
+#  execute_process(python3 -m pip install f90wrap h5py)
 endif()
 
 # Add option for single-precision builds
